# nucleus-shell

./: .gitignore
.github/: CODEOWNERS  CONTRIBUTING.md  README.md
.github/workflows/: quickshell.yml
docs/: Todo.md
helium/nucleus-shell/: config.json  config.py  daemon.py
helium/nucleus-shell/css/: bar.css  colors.css  defaults.css  powermenu.css  sidebarRight.css
helium/nucleus-shell/modules/: bar.py  powermenu.py
helium/nucleus-shell/modules/bar/: bar.py
helium/nucleus-shell/modules/powermenu/: powermenu.py
helium/nucleus-shell/modules/sidebarRight/: quicktoggle.py  sidebarRight.py
helium/nucleus-shell/services/: idleinhibit.py  modules.py  nightlight.py  recorder.py  system.py  theme.py  toplevel.py
install/: unified.sh  update.sh
nucleus-shell/: Cargo.toml  build.rs  config.json
nucleus-shell/material/: colors.slint
nucleus-shell/src/: config.rs  main.rs
nucleus-shell/src/shell/: mod.rs
nucleus-shell/src/shell/modules/bar/: bar.rs  bar.slint  mod.rs
nucleus-shell/src/shell/services/: hyprland.rs  mod.rs
quickshell/nucleus-shell/: .qmlls.ini  shell.qml
quickshell/nucleus-shell/config/: Appearance.qml  Config.qml  Globals.qml  Ipc.qml
quickshell/nucleus-shell/modules/components/: ContentRowCard.qml  InfoCard.qml  StyledPopout.qml  StyledSwitch.qml  StyledTextField.qml
quickshell/nucleus-shell/modules/hosts/: ModuleLoader.qml  (+2 more)
quickshell/nucleus-shell/services/: Contracts.qml  Hyprland.qml  ModuleHost.qml  ModuleRegistry.qml  Mpris.qml  NotifServer.qml  PluginBus.qml  SystemDetails.qml  UPower.qml  UpdateNotifier.qml  Zenith.qml
(+36 files in other folders)
