[package]
name = "nucleus-shell"
version = "2.0.0"
edition = "2024"

[dependencies]
helium = { package = "helium-wsl", version = "0.2.1" }
anyhow = "1.0.102"
chrono = "0.4.45"
dirs = "6.0.0"
env_logger = "0.11.10"
layer-shika = { git = "https://github.com/waydeerwm/layer-shika" }
layer-shika-adapters = { git = "https://github.com/waydeerwm/layer-shika" }
log = "0.4.31"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
slint = "1"

[build-dependencies]
slint-build = "1"
